# EARP-Gait

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/osm/: LICENSE_OSM.md  muscat_mutrah.json  salalah_haffa.json
docs/: cover_letter.docx  cover_letter.md  manuscript.docx  mathematical_model.md  references.md
earp_gait/: __init__.py  experiments.py  model.py  osm_env.py  planner.py  social_force.py
results/: results.json  results_oman_real.json  results_social_force.json
scripts/: fetch_osm.py  make_figures.py  run_experiments.py  run_oman_real.py  run_social_force.py
